Added GTM and tags

--- a/src/SFA.DAS.ProviderRelationships.Web.UnitTests/SFA.DAS.ProviderRelationships.Web.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Web.UnitTests/SFA.DAS.ProviderRelationships.Web.UnitTests.csproj
@@ -26,4 +26,8 @@
         <Reference Include="System.Web" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Filters\" />
+    </ItemGroup>
+
 </Project>
