Moved has permission readstore access into api to support MI authentication changes

--- a/src/SFA.DAS.ProviderRelationships.Api.Client.UnitTests/SFA.DAS.ProviderRelationships.Api.Client.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Api.Client.UnitTests/SFA.DAS.ProviderRelationships.Api.Client.UnitTests.csproj
@@ -17,6 +17,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Api.Client\SFA.DAS.ProviderRelationships.Api.Client.csproj" />
+        <ProjectReference Include="..\SFA.DAS.ProviderRelationships\SFA.DAS.ProviderRelationships.csproj" />
     </ItemGroup>
 
 </Project>
