--- a/src/SFA.DAS.ProviderRelationships.Api/Web.config
+++ b/src/SFA.DAS.ProviderRelationships.Api/Web.config
@@ -5,6 +5,7 @@
     </configSections>
     <appSettings>
         <add key="APPINSIGHTS_INSTRUMENTATIONKEY" value=""/>
+        <add key="EnvironmentName" value="AT"/>
     </appSettings>
     <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd">
         <variable name="appName" value="das-providerrelationships-api"/>
