--- a/src/SFA.DAS.ProviderRelationships/SFA.DAS.ProviderRelationships.csproj
+++ b/src/SFA.DAS.ProviderRelationships/SFA.DAS.ProviderRelationships.csproj
@@ -15,6 +15,7 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.0" />
         <PackageReference Include="Microsoft.WindowsAzure.ConfigurationManager" Version="3.2.3" />
         <PackageReference Include="NLog.Extensions.Logging" Version="1.3.0" />
+        <PackageReference Include="SFA.DAS.Authentication.Extensions.Legacy" Version="1.0.29" />
         <PackageReference Include="SFA.DAS.Authorization" Version="1.1.1" />
         <PackageReference Include="SFA.DAS.Authorization.EmployerFeatures" Version="1.1.1" />
         <PackageReference Include="SFA.DAS.Authorization.EmployerUserRoles" Version="1.1.1" />
