FAI-628 adding some of packages needed.

--- a/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
@@ -107,6 +107,13 @@
     <PackageReference Include="WebGrease" Version="1.6.0" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.3.2" />
   </ItemGroup>
+    <ItemGroup>
+    <PackageReference Include="Azure.Core" Version="1.25.0" />
+    <PackageReference Include="Azure.Identity" Version="1.4.0" />
+    <PackageReference Include="Microsoft.IdentityModel.KeyVaultExtensions" Version="6.22.1" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.23.1" />
+    <PackageReference Include="System.Text.Json" Version="6.0.0" />
+  </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
