FAI-628 adding employer accounts to claims

--- a/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
@@ -131,6 +131,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\StructuremapMvc.cs" />
     <Compile Include="Authentication\AuthenticationUrls.cs" />
+    <Compile Include="Authentication\GovUk\DasClaimsTypesExtended.cs" />
     <Compile Include="Authentication\GovUk\Models\GovUkUser.cs" />
     <Compile Include="Authentication\GovUk\Models\Token.cs" />
     <Compile Include="Authentication\GovUk\Services\AzureIdentityService.cs" />
