--- a/src/SFA.DAS.ProviderRelationships/SFA.DAS.ProviderRelationships.csproj
+++ b/src/SFA.DAS.ProviderRelationships/SFA.DAS.ProviderRelationships.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <LangVersion>latest</LangVersion>
-        <TargetFramework>net462</TargetFramework>
+        <TargetFramework>netstandard2.0</TargetFramework>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     </PropertyGroup>
 
@@ -10,43 +10,35 @@
         <PackageReference Include="AutoMapper" Version="7.0.1" />
         <PackageReference Include="FAKEBuildScript" Version="1.2.8" />
         <PackageReference Include="MediatR" Version="6.0.0" />
-        <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.6" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.0" />
         <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.2.0" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.2.0" />
-        <PackageReference Include="Microsoft.WindowsAzure.ConfigurationManager" Version="3.2.3" />
+        <!--PackageReference Include="Microsoft.WindowsAzure.ConfigurationManager" Version="3.2.3" /-->
         <PackageReference Include="NLog.Extensions.Logging" Version="1.3.0" />
         <PackageReference Include="SFA.DAS.Authentication.Extensions.Legacy" Version="1.0.29" />
         <PackageReference Include="SFA.DAS.Authorization" Version="1.1.1" />
         <PackageReference Include="SFA.DAS.Authorization.EmployerFeatures" Version="1.1.1" />
         <PackageReference Include="SFA.DAS.Authorization.EmployerUserRoles" Version="1.1.1" />
-        <PackageReference Include="SFA.DAS.Configuration" Version="1.0.0.53229" />
-        <PackageReference Include="SFA.DAS.Configuration.AzureTableStorage" Version="1.0.0.53229" />
+        <PackageReference Include="SFA.DAS.Configuration" Version="2.0.2" /><!--newtonsoft >=12.0.1-->
+        <PackageReference Include="SFA.DAS.Configuration.AzureTableStorage" Version="2.0.2" />
         <PackageReference Include="SFA.DAS.Encoding" Version="1.1.57" />
-        <PackageReference Include="SFA.DAS.HashingService" Version="1.0.0.57835" />
-        <PackageReference Include="SFA.DAS.Http" Version="3.2.69" />
-        <PackageReference Include="SFA.DAS.NLog.Logger" Version="1.1.5" />
-        <PackageReference Include="SFA.DAS.NServiceBus" Version="15.0.25" />
+        <PackageReference Include="SFA.DAS.Http" Version="3.2.69" /><!--newtonsoft >=11.0.2-->
+        <PackageReference Include="SFA.DAS.NServiceBus" Version="15.0.25" /><!--nsbus newtonsoft >=2.1.0-->
         <PackageReference Include="SFA.DAS.NServiceBus.SqlServer" Version="15.0.25" />
+        <PackageReference Include="SFA.DAS.PAS.Account.Api.ClientV2" Version="17267.0.542" />
+        <!--PackageReference Include="SFA.DAS.PAS.Account.Api.TypesV2" Version="1.1.837" /-->
         <PackageReference Include="SFA.DAS.UnitOfWork" Version="9.0.13" />
         <PackageReference Include="SFA.DAS.Validation" Version="5.1.3" />
         <PackageReference Include="StructureMap" Version="4.7.1" />
         <PackageReference Include="System.Net.Http" Version="4.3.4" />
-        <PackageReference Include="WindowsAzure.Storage" Version="9.3.2" />
+        <PackageReference Include="WindowsAzure.Storage" Version="9.3.2" /><!--newtonsoft >=10.0.2-->
         <PackageReference Include="SFA.DAS.CosmosDb" Version="1.0.47" />
-        <PackageReference Include="SFA.DAS.PAS.Account.Api.Client" Version="17267.0.532" />
-        <PackageReference Include="SFA.DAS.PAS.Account.Api.Types" Version="17267.0.532" />
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Api.Client\SFA.DAS.ProviderRelationships.Api.Client.csproj" />
         <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Messages\SFA.DAS.ProviderRelationships.Messages.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <Reference Include="System" />
-        <Reference Include="System.Web" />
     </ItemGroup>
 
 </Project>
