--- a/src/SFA.DAS.ProviderRelationships/SFA.DAS.ProviderRelationships.csproj
+++ b/src/SFA.DAS.ProviderRelationships/SFA.DAS.ProviderRelationships.csproj
@@ -24,15 +24,17 @@
         <PackageReference Include="SFA.DAS.Configuration.AzureTableStorage" Version="2.0.2" />
         <PackageReference Include="SFA.DAS.Encoding" Version="1.1.57" />
         <PackageReference Include="SFA.DAS.Http" Version="3.2.69" /><!--newtonsoft >=11.0.2-->
-        <PackageReference Include="SFA.DAS.NServiceBus" Version="15.0.25" /><!--nsbus newtonsoft >=2.1.0-->
-        <PackageReference Include="SFA.DAS.NServiceBus.SqlServer" Version="15.0.25" />
+        <PackageReference Include="SFA.DAS.NServiceBus" Version="17.0.6" />
+        <PackageReference Include="SFA.DAS.NServiceBus.SqlServer" Version="17.0.6" />
+        <PackageReference Include="NServiceBus.Newtonsoft.Json" Version="2.4.0" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+        <PackageReference Include="NServiceBus.Persistence.Sql" Version="6.5.1" />
         <PackageReference Include="SFA.DAS.PAS.Account.Api.ClientV2" Version="17267.0.542" />
-        <!--PackageReference Include="SFA.DAS.PAS.Account.Api.TypesV2" Version="1.1.837" /-->
         <PackageReference Include="SFA.DAS.UnitOfWork" Version="9.0.13" />
         <PackageReference Include="SFA.DAS.Validation" Version="5.1.3" />
         <PackageReference Include="StructureMap" Version="4.7.1" />
         <PackageReference Include="System.Net.Http" Version="4.3.4" />
-        <PackageReference Include="WindowsAzure.Storage" Version="9.3.2" /><!--newtonsoft >=10.0.2-->
+        <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" /><!--newtonsoft >=10.0.2-->
         <PackageReference Include="SFA.DAS.CosmosDb" Version="1.0.47" />
     </ItemGroup>
 
