--- a/src/SFA.DAS.ProviderRelationships/SFA.DAS.ProviderRelationships.csproj
+++ b/src/SFA.DAS.ProviderRelationships/SFA.DAS.ProviderRelationships.csproj
@@ -14,16 +14,15 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.0" />
         <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.2.0" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.2.0" />
-        <!--PackageReference Include="Microsoft.WindowsAzure.ConfigurationManager" Version="3.2.3" /-->
         <PackageReference Include="NLog.Extensions.Logging" Version="1.3.0" />
         <PackageReference Include="SFA.DAS.Authentication.Extensions.Legacy" Version="1.0.29" />
         <PackageReference Include="SFA.DAS.Authorization" Version="1.1.1" />
         <PackageReference Include="SFA.DAS.Authorization.EmployerFeatures" Version="1.1.1" />
         <PackageReference Include="SFA.DAS.Authorization.EmployerUserRoles" Version="1.1.1" />
-        <PackageReference Include="SFA.DAS.Configuration" Version="2.0.2" /><!--newtonsoft >=12.0.1-->
+        <PackageReference Include="SFA.DAS.Configuration" Version="2.0.2" />
         <PackageReference Include="SFA.DAS.Configuration.AzureTableStorage" Version="2.0.2" />
         <PackageReference Include="SFA.DAS.Encoding" Version="1.1.57" />
-        <PackageReference Include="SFA.DAS.Http" Version="3.2.69" /><!--newtonsoft >=11.0.2-->
+        <PackageReference Include="SFA.DAS.Http" Version="3.2.69" />
         <PackageReference Include="SFA.DAS.NServiceBus" Version="17.0.6" />
         <PackageReference Include="SFA.DAS.NServiceBus.SqlServer" Version="17.0.6" />
         <PackageReference Include="NServiceBus.Newtonsoft.Json" Version="2.4.0" />
@@ -34,7 +33,7 @@
         <PackageReference Include="SFA.DAS.Validation" Version="5.1.3" />
         <PackageReference Include="StructureMap" Version="4.7.1" />
         <PackageReference Include="System.Net.Http" Version="4.3.4" />
-        <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" /><!--newtonsoft >=10.0.2-->
+        <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
         <PackageReference Include="SFA.DAS.CosmosDb" Version="1.0.47" />
     </ItemGroup>
 
