--- a/src/SFA.DAS.ProviderRelationships.UnitTests/SFA.DAS.ProviderRelationships.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelationships.UnitTests/SFA.DAS.ProviderRelationships.UnitTests.csproj
@@ -8,20 +8,26 @@
 
     <ItemGroup>
         <PackageReference Include="AutoMapper " Version="7.0.1" />
-        <PackageReference Include="EfCore.TestSupport" Version="1.5.2" />
-        <PackageReference Include="MediatR" Version="6.0.0" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.2.0" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
-        <PackageReference Include="Moq" Version="4.10.1" />
-        <PackageReference Include="NUnit" Version="3.11.0" />
-        <PackageReference Include="NUnit3TestAdapter" Version="3.12.0" />
+        <PackageReference Include="EfCore.SchemaCompare" Version="6.0.0" />
+        <PackageReference Include="EfCore.TestSupport" Version="5.3.0" />
+        <PackageReference Include="FluentAssertions" Version="6.8.0" />
+        <PackageReference Include="MediatR" Version="11.1.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.1" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.1" />
+        <PackageReference Include="Moq" Version="4.18.3" />
+        <PackageReference Include="NUnit" Version="3.13.3" />
+        <PackageReference Include="NUnit3TestAdapter" Version="4.3.1" />
         <PackageReference Include="SFA.DAS.CosmosDb.Testing" Version="1.0.47" />
-        <PackageReference Include="SFA.DAS.Testing" Version="2.0.5" />
-        <PackageReference Include="SFA.DAS.Validation" Version="5.1.3" />
+        <PackageReference Include="SFA.DAS.Testing" Version="3.0.169" />
+        <PackageReference Include="SFA.DAS.Validation" Version="6.0.15" />
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\SFA.DAS.ProviderRelationships\SFA.DAS.ProviderRelationships.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Update="AutoMapper" Version="12.0.0" />
     </ItemGroup>
 
 
