--- a/src/SFA.DAS.ProviderRelationships.UnitTests/SFA.DAS.ProviderRelationships.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelationships.UnitTests/SFA.DAS.ProviderRelationships.UnitTests.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoFixture.NUnit3" Version="4.17.0" />
         <PackageReference Include="AutoMapper " Version="7.0.1" />
         <PackageReference Include="EfCore.SchemaCompare" Version="6.0.0" />
         <PackageReference Include="EfCore.TestSupport" Version="5.3.0" />
