--- a/src/SFA.DAS.ProviderRelationships.MessageHandlers.TestHarness/SFA.DAS.ProviderRelationships.MessageHandlers.TestHarness.csproj
+++ b/src/SFA.DAS.ProviderRelationships.MessageHandlers.TestHarness/SFA.DAS.ProviderRelationships.MessageHandlers.TestHarness.csproj
@@ -3,14 +3,14 @@
     <PropertyGroup>
         <LangVersion>latest</LangVersion>
         <OutputType>Exe</OutputType>
-        <TargetFramework>net462</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="NLog.Schema" Version="4.5.10" />
-        <PackageReference Include="SFA.DAS.EmployerAccounts.Messages" Version="1.3.2040" />
-        <PackageReference Include="SFA.DAS.NLog.Logger" Version="1.1.5" />
+        <PackageReference Include="SFA.DAS.EmployerAccounts.Messages" Version="1.6.3195" />
+        <PackageReference Include="SFA.DAS.NLog.Targets.Redis" Version="1.2.1" />
         <PackageReference Include="SFA.DAS.UnitOfWork.EntityFrameworkCore" Version="9.0.13" />
         <PackageReference Include="SFA.DAS.UnitOfWork.NServiceBus" Version="9.0.13" />
         <PackageReference Include="StructureMap" Version="4.7.1" />
@@ -19,20 +19,6 @@
     <ItemGroup>
         <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Messages\SFA.DAS.ProviderRelationships.Messages.csproj" />
         <ProjectReference Include="..\SFA.DAS.ProviderRelationships\SFA.DAS.ProviderRelationships.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <Reference Include="System" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <None Include="App.config">
-            <TransformOnBuild>true</TransformOnBuild>
-        </None>
-        <None Include="App.*.config">
-            <DependentUpon>App.config</DependentUpon>
-            <IsTransformFile>True</IsTransformFile>
-        </None>
     </ItemGroup>
 
 </Project>
