--- a/src/SFA.DAS.ProviderRelationships.Api.Client.TestHarness/SFA.DAS.ProviderRelationships.Api.Client.TestHarness.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Api.Client.TestHarness/SFA.DAS.ProviderRelationships.Api.Client.TestHarness.csproj
@@ -8,9 +8,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
-        <PackageReference Include="SFA.DAS.AutoConfiguration" Version="2.2.6" />
-        <PackageReference Include="StructureMap" Version="4.7.1" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
     </ItemGroup>
 
     <ItemGroup>
