--- a/src/SFA.DAS.ProviderRelationships/SFA.DAS.ProviderRelationships.csproj
+++ b/src/SFA.DAS.ProviderRelationships/SFA.DAS.ProviderRelationships.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <LangVersion>latest</LangVersion>
-        <TargetFramework>netstandard2.1</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     </PropertyGroup>
 
@@ -19,8 +19,8 @@
         <PackageReference Include="SFA.DAS.Configuration.AzureTableStorage" Version="3.0.84" />
         <PackageReference Include="SFA.DAS.Encoding" Version="1.1.76" />
         <PackageReference Include="SFA.DAS.Http" Version="3.2.69" />
-        <PackageReference Include="SFA.DAS.NServiceBus" Version="17.0.6" />
-        <PackageReference Include="SFA.DAS.NServiceBus.SqlServer" Version="17.0.6" />
+        <PackageReference Include="SFA.DAS.NServiceBus" Version="17.0.49" />
+        <PackageReference Include="SFA.DAS.NServiceBus.SqlServer" Version="17.0.49" />
         <PackageReference Include="NServiceBus.Newtonsoft.Json" Version="2.4.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
         <PackageReference Include="NServiceBus.Persistence.Sql" Version="6.5.1" />
