--- a/src/SFA.DAS.ProviderRelationships.Web/appsettings.json
+++ b/src/SFA.DAS.ProviderRelationships.Web/appsettings.json
@@ -11,9 +11,10 @@
         "url": "https://das-at-frnt-end.azureedge.net"
     },
     "ConfigurationStorageConnectionString": "UseDevelopmentStorage=true;",
-    "ConfigNames": "SFA.DAS.ProviderRelationshipsV2,SFA.DAS.Employer.GovSignIn",
+    "ConfigNames": "SFA.DAS.ProviderRelationshipsV2,SFA.DAS.ProviderRelationships.EmployerFeatures,SFA.DAS.Encoding,SFA.DAS.Employer.GovSignIn",
     "Environment": "LOCAL",
     "Version": "1.0",
     "APPINSIGHTS_INSTRUMENTATIONKEY": "",
-    "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "ResourceEnvironmentName": "LOCAL"
 }
