--- a/src/SFA.DAS.ProviderRelationships.Jobs.UnitTests/SFA.DAS.ProviderRelationships.Jobs.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Jobs.UnitTests/SFA.DAS.ProviderRelationships.Jobs.UnitTests.csproj
@@ -1,28 +1,23 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
-    <PropertyGroup>
-        <LangVersion>latest</LangVersion>
-        <TargetFramework>net462</TargetFramework>
-        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    </PropertyGroup>
-
-    <ItemGroup>
-        <PackageReference Include="AutoMapper" Version="7.0.1" />
-        <PackageReference Include="MediatR" Version="6.0.0" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.1.4" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
-        <PackageReference Include="Moq" Version="4.10.1" />
-        <PackageReference Include="NUnit" Version="3.11.0" />
-        <PackageReference Include="NUnit3TestAdapter" Version="3.12.0" />
-        <PackageReference Include="SFA.DAS.Testing" Version="2.0.5" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Jobs\SFA.DAS.ProviderRelationships.Jobs.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <Reference Include="System" />
-    </ItemGroup>
-
+  <PropertyGroup>
+    <LangVersion>latest</LangVersion>
+    <TargetFramework>net6.0</TargetFramework>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.1.4" />
+    <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
+    <PackageReference Include="SFA.DAS.NServiceBus.SqlServer" Version="16.0.20" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+    <PackageReference Include="Moq" Version="4.10.1" />
+    <PackageReference Include="NUnit" Version="3.11.0" />
+    <PackageReference Include="SFA.DAS.Testing" Version="2.0.5" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.4.0" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Jobs\SFA.DAS.ProviderRelationships.Jobs.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System" />
+  </ItemGroup>
 </Project>
