--- a/src/SFA.DAS.ProviderRelationships.MessageHandlers.UnitTests/SFA.DAS.ProviderRelationships.MessageHandlers.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelationships.MessageHandlers.UnitTests/SFA.DAS.ProviderRelationships.MessageHandlers.UnitTests.csproj
@@ -4,6 +4,12 @@
     <TargetFramework>net6.0</TargetFramework>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <TreatWarningsAsErrors>False</TreatWarningsAsErrors>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <TreatWarningsAsErrors>False</TreatWarningsAsErrors>
+  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AutoFixture.NUnit3" Version="4.6.0" />
     <PackageReference Include="AutoMapper " Version="12.0.1" />
