--- a/src/SFA.DAS.ProviderRelationships.Jobs.UnitTests/SFA.DAS.ProviderRelationships.Jobs.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Jobs.UnitTests/SFA.DAS.ProviderRelationships.Jobs.UnitTests.csproj
@@ -4,6 +4,12 @@
     <TargetFramework>net6.0</TargetFramework>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <TreatWarningsAsErrors>False</TreatWarningsAsErrors>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <TreatWarningsAsErrors>False</TreatWarningsAsErrors>
+  </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.1.4" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
