--- a/src/SFA.DAS.ProviderRelationships.Jobs/SFA.DAS.ProviderRelationships.Jobs.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Jobs/SFA.DAS.ProviderRelationships.Jobs.csproj
@@ -25,6 +25,7 @@
     <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions" Version="3.0.6" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Logging.ApplicationInsights" Version="3.0.34" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.10.1" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SFA.DAS.ProviderRelationships\SFA.DAS.ProviderRelationships.csproj" />
