--- a/src/SFA.DAS.ProviderRelationships.UnitTests/SFA.DAS.ProviderRelationships.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelationships.UnitTests/SFA.DAS.ProviderRelationships.UnitTests.csproj
@@ -3,7 +3,6 @@
     <PropertyGroup>
         <LangVersion>latest</LangVersion>
         <TargetFramework>net6.0</TargetFramework>
-        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     </PropertyGroup>
 
     <ItemGroup>
@@ -17,6 +16,7 @@
         <PackageReference Include="Moq" Version="4.18.3" />
         <PackageReference Include="NUnit" Version="3.13.3" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.3.1" />
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.10.1" />
         <PackageReference Include="SFA.DAS.CosmosDb.Testing" Version="1.0.47" />
         <PackageReference Include="SFA.DAS.Testing" Version="3.0.169" />
     </ItemGroup>
