--- a/src/SFA.DAS.ProviderRelationships.Jobs/SFA.DAS.ProviderRelationships.Jobs.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Jobs/SFA.DAS.ProviderRelationships.Jobs.csproj
@@ -1,61 +1,63 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk;Microsoft.NET.Sdk.Publish">
-  <PropertyGroup>
-    <LangVersion>latest</LangVersion>
-    <TargetFramework>net6.0</TargetFramework>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <IsGenerateRunCommandFileDisabled>true</IsGenerateRunCommandFileDisabled>
-    <IsWebJobProject>true</IsWebJobProject>
-    <OutputType>Exe</OutputType>
-    <WebJobName>ProviderRelationships-Jobs</WebJobName>
-    <WebJobType>Continuous</WebJobType>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <TreatWarningsAsErrors>False</TreatWarningsAsErrors>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <TreatWarningsAsErrors>False</TreatWarningsAsErrors>
-  </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="morelinq" Version="3.0.0" />
-    <PackageReference Include="SFA.DAS.NServiceBus.SqlServer" Version="16.0.20" />
-    <PackageReference Include="NLog.Schema" Version="4.5.10" />
-    <PackageReference Include="SFA.DAS.NLog.Logger" Version="1.2.1" />
-    <PackageReference Include="SFA.DAS.NLog.Targets.Redis" Version="1.1.5" />
-    <PackageReference Include="SFA.DAS.UnitOfWork.EntityFrameworkCore" Version="9.0.13" />
-    <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
-    <PackageReference Include="Microsoft.Azure.WebJobs.Extensions" Version="3.0.6" />
-    <PackageReference Include="Microsoft.Azure.WebJobs.Logging.ApplicationInsights" Version="3.0.34" />
-    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.10.1" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\SFA.DAS.ProviderRelationships\SFA.DAS.ProviderRelationships.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.*.config">
-      <DependentUpon>App.config</DependentUpon>
-      <IsTransformFile>True</IsTransformFile>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <None Remove="C:\Users\ADM_HarrisJo\.nuget\packages\nlog.schema\4.5.10\contentFiles\any\any\NLog.xsd" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Update="nlog.config">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="nlog.Development.config">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Update="settings.job">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="appsettings.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
+    <PropertyGroup>
+        <LangVersion>latest</LangVersion>
+        <TargetFramework>net6.0</TargetFramework>
+        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+        <IsGenerateRunCommandFileDisabled>true</IsGenerateRunCommandFileDisabled>
+        <IsWebJobProject>true</IsWebJobProject>
+        <OutputType>Exe</OutputType>
+        <WebJobName>ProviderRelationships-Jobs</WebJobName>
+        <WebJobType>Continuous</WebJobType>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+        <TreatWarningsAsErrors>False</TreatWarningsAsErrors>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+        <TreatWarningsAsErrors>False</TreatWarningsAsErrors>
+    </PropertyGroup>
+    <ItemGroup>
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+        <PackageReference Include="Microsoft.Azure.WebJobs.Host.Storage" Version="4.1.0" />
+        <PackageReference Include="morelinq" Version="3.3.2" />
+        <PackageReference Include="SFA.DAS.NServiceBus.SqlServer" Version="16.0.21" />
+        <PackageReference Include="NLog.Schema" Version="5.1.2" />
+        <PackageReference Include="SFA.DAS.NLog.Logger" Version="1.2.1" />
+        <PackageReference Include="SFA.DAS.NLog.Targets.Redis" Version="1.2.1" />
+        <PackageReference Include="SFA.DAS.UnitOfWork.EntityFrameworkCore" Version="9.0.13" />
+        <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
+        <PackageReference Include="Microsoft.Azure.WebJobs.Extensions" Version="4.0.1" />
+        <PackageReference Include="Microsoft.Azure.WebJobs.Logging.ApplicationInsights" Version="3.0.34" />
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.23.1" />
+    </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\SFA.DAS.ProviderRelationships\SFA.DAS.ProviderRelationships.csproj" />
+    </ItemGroup>
+    <ItemGroup>
+        <Reference Include="System" />
+    </ItemGroup>
+    <ItemGroup>
+        <None Include="App.*.config">
+            <DependentUpon>App.config</DependentUpon>
+            <IsTransformFile>True</IsTransformFile>
+        </None>
+    </ItemGroup>
+    <ItemGroup>
+        <None Remove="C:\Users\ADM_HarrisJo\.nuget\packages\nlog.schema\4.5.10\contentFiles\any\any\NLog.xsd" />
+    </ItemGroup>
+    <ItemGroup>
+        <None Update="nlog.config">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+        <None Update="nlog.Development.config">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+        <None Update="settings.job">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </None>
+    </ItemGroup>
+    <ItemGroup>
+        <Content Include="appsettings.json">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
 </Project>
