--- a/src/SFA.DAS.ProviderRelationships.UnitTests/SFA.DAS.ProviderRelationships.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelationships.UnitTests/SFA.DAS.ProviderRelationships.UnitTests.csproj
@@ -6,19 +6,21 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
         <PackageReference Include="AutoFixture.NUnit3" Version="4.17.0" />
         <PackageReference Include="EfCore.SchemaCompare" Version="6.0.0" />
         <PackageReference Include="EfCore.TestSupport" Version="5.3.0" />
-        <PackageReference Include="FluentAssertions" Version="6.8.0" />
+        <PackageReference Include="FluentAssertions" Version="6.10.0" />
         <PackageReference Include="MediatR" Version="11.1.0" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.1" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.1" />
-        <PackageReference Include="Moq" Version="4.18.3" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="6.0.14" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
+        <PackageReference Include="Moq" Version="4.18.4" />
         <PackageReference Include="NUnit" Version="3.13.3" />
-        <PackageReference Include="NUnit3TestAdapter" Version="4.3.1" />
-        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.10.1" />
+        <PackageReference Include="NUnit3TestAdapter" Version="4.4.0" />
+        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.23.1" />
         <PackageReference Include="SFA.DAS.CosmosDb.Testing" Version="1.0.47" />
         <PackageReference Include="SFA.DAS.Testing" Version="3.0.169" />
+        <PackageReference Include="SFA.DAS.NServiceBus.SqlServer" Version="16.0.21" />
     </ItemGroup>
 
     <ItemGroup>
