--- a/src/SFA.DAS.ProviderRelationships.Api/appsettings.json
+++ b/src/SFA.DAS.ProviderRelationships.Api/appsettings.json
@@ -1,12 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*",
-  "APPINSIGHTS_INSTRUMENTATIONKEY": "",
-  "EnvironmentName": "LOCAL"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "AllowedHosts": "*",
+    "APPINSIGHTS_INSTRUMENTATIONKEY": "",
+    "EnvironmentName": "LOCAL",
+    "ConfigNames": "SFA.DAS.ProviderRelationshipsV2,SFA.DAS.ProviderRelationships.ReadStore,SFA.DAS.Encoding"
 }
