--- a/src/SFA.DAS.ProviderRelationships.Web.UnitTests/SFA.DAS.ProviderRelationships.Web.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Web.UnitTests/SFA.DAS.ProviderRelationships.Web.UnitTests.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="NLog" Version="5.1.2" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
         <PackageReference Include="AutoFixture" Version="4.17.0" />
         <PackageReference Include="AutoFixture.NUnit3" Version="4.17.0" />
