--- a/src/SFA.DAS.ProviderRelationships.Api.Client.UnitTests/SFA.DAS.ProviderRelationships.Api.Client.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Api.Client.UnitTests/SFA.DAS.ProviderRelationships.Api.Client.UnitTests.csproj
@@ -6,6 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="FluentAssertions" Version="6.10.0" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
         <PackageReference Include="Moq" Version="4.18.4" />
