--- a/src/SFA.DAS.ProviderRelationships.Api.UnitTests/SFA.DAS.ProviderRelationships.Api.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Api.UnitTests/SFA.DAS.ProviderRelationships.Api.UnitTests.csproj
@@ -11,11 +11,13 @@
     <TreatWarningsAsErrors>False</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="6.10.0" />
     <PackageReference Include="Microsoft.AspNet.WebApi" Version="5.2.6" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.23.1" />
     <PackageReference Include="Moq" Version="4.18.4" />
     <PackageReference Include="NUnit" Version="3.13.3" />
+    <PackageReference Include="NLog" Version="5.1.2" />
     <PackageReference Include="SFA.DAS.Testing" Version="3.0.169" />
     <PackageReference Include="SFA.DAS.Validation" Version="6.0.30" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.4.0" />
