--- a/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
@@ -11,9 +11,10 @@
     <ItemGroup>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
         <PackageReference Include="AutoMapper" Version="12.0.1" />
+        <PackageReference Include="NLog" Version="5.1.2" />
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
-        <PackageReference Include="MediatR" Version="11.1.0" />
-        <PackageReference Include="mediatr.extensions.microsoft.dependencyinjection" Version="11.0.0" />
+        <PackageReference Include="NLog.Web.AspNetCore" Version="5.2.2" />
+        <PackageReference Include="SFA.DAS.Api.Common" Version="1.0.28" />
         <PackageReference Include="SFA.DAS.NServiceBus.SqlServer" Version="16.0.21" />
         <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.21.0" />
         <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.9" />
@@ -35,8 +36,9 @@
         <PackageReference Include="SFA.DAS.HashingService" Version="1.0.183" />
         <PackageReference Include="SFA.DAS.GovUK.Auth" Version="0.2.203" />
         <PackageReference Include="SFA.DAS.NServiceBus.SqlServer" Version="16.0.21" />
-        <PackageReference Include="SFA.DAS.UnitOfWork.EntityFrameworkCore" Version="9.0.13" />
+        <PackageReference Include="SFA.DAS.UnitOfWork.EntityFrameworkCore" Version="9.0.28" />
         <PackageReference Include="SFA.DAS.UnitOfWork.Mvc" Version="9.0.13" />
+        <PackageReference Include="SFA.DAS.UnitOfWork.NServiceBus" Version="9.0.28" />
         <PackageReference Include="SFA.DAS.Validation.Mvc" Version="6.0.30" />
 
         <PackageReference Include="StackExchange.Redis" Version="2.6.66" />
