Corrected EnvironmentName config key

--- a/src/SFA.DAS.ProviderRelationships.Web/appsettings.json
+++ b/src/SFA.DAS.ProviderRelationships.Web/appsettings.json
@@ -12,7 +12,7 @@
     },
     "ConfigurationStorageConnectionString": "UseDevelopmentStorage=true;",
     "ConfigNames": "SFA.DAS.ProviderRelationshipsV2,SFA.DAS.ProviderRelationships.EmployerFeatures,SFA.DAS.Encoding,SFA.DAS.Employer.GovSignIn",
-    "Environment": "LOCAL",
+    "EnvironmentName": "LOCAL",
     "Version": "1.0",
     "APPINSIGHTS_INSTRUMENTATIONKEY": "",
     "AllowedHosts": "*",
