Config wireup update for message handlers

--- a/src/SFA.DAS.ProviderRelationships.MessageHandlers/appsettings.json
+++ b/src/SFA.DAS.ProviderRelationships.MessageHandlers/appsettings.json
@@ -4,5 +4,6 @@
     "ConnectionStrings": {
         "AzureWebJobsDashboard": "UseDevelopmentStorage=true",
         "AzureWebJobsStorage": "UseDevelopmentStorage=true"
-    }
+    },
+    "ConfigNames": "SFA.DAS.ProviderRelationships.Web,SFA.DAS.Encoding"
 }
