Specifying config targetfilenmame of  'SFA.DAS.ProviderRelationshipsV2.schema.json' instead of using wildcard

--- a/pipeline-templates/job/deploy.yml
+++ b/pipeline-templates/job/deploy.yml
@@ -64,7 +64,7 @@ jobs:
             SourcePath: $(Pipeline.Workspace)/das-employer-config/Configuration/das-providerrelationships
             StorageAccountName: $(ConfigurationStorageAccountName)
             StorageAccountResourceGroup: $(SharedEnvResourceGroup)
-            TargetFileName: '*.schema.json'
+            TargetFileName: 'SFA.DAS.ProviderRelationshipsV2.schema.json'
             TableName: Configuration
             ConfigurationSecrets:
               DefaultSessionRedisConnectionString: $(DefaultSessionRedisConnectionString)
